Update CSGO Winner Prediction.ipynb

--- a/CSGO Winner Prediction.ipynb
+++ b/CSGO Winner Prediction.ipynb
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "81477aed",
+   "id": "180cd7a9",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "858c7b40",
+   "id": "5f9be276",
    "metadata": {},
    "outputs": [
     {
@@ -945,10 +945,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e66baa",
+   "id": "e2d38422",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# List of columns names was found. Now find a collection of all the data "
+   ]
   }
  ],
  "metadata": {
