Update CSGO Winner Prediction.ipynb

--- a/CSGO Winner Prediction.ipynb
+++ b/CSGO Winner Prediction.ipynb
@@ -2516,16 +2516,404 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "34b60bed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#We have a complete stat sheet. Ready to move on\n",
+    "df = pd.read_csv(\"complete_stat_sheet.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "ee4b14e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_x</th>\n",
+       "      <th>team_1_x</th>\n",
+       "      <th>team_2_x</th>\n",
+       "      <th>_map_x</th>\n",
+       "      <th>result_1</th>\n",
+       "      <th>result_2</th>\n",
+       "      <th>map_winner</th>\n",
+       "      <th>starting_ct</th>\n",
+       "      <th>ct_1</th>\n",
+       "      <th>t_2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>system</th>\n",
+       "      <th>t1_removed_1</th>\n",
+       "      <th>t1_removed_2</th>\n",
+       "      <th>t1_removed_3</th>\n",
+       "      <th>t2_removed_1</th>\n",
+       "      <th>t2_removed_2</th>\n",
+       "      <th>t2_removed_3</th>\n",
+       "      <th>t1_picked_1</th>\n",
+       "      <th>t2_picked_1</th>\n",
+       "      <th>left_over</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>NiP</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>123412</td>\n",
+       "      <td>Dust2</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Vertigo</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Nuke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>NiP</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>123412</td>\n",
+       "      <td>Dust2</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Vertigo</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Nuke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>NiP</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>123412</td>\n",
+       "      <td>Dust2</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Vertigo</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Nuke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>NiP</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>123412</td>\n",
+       "      <td>Dust2</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Vertigo</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Nuke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>NiP</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>123412</td>\n",
+       "      <td>Dust2</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Vertigo</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Nuke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9415</th>\n",
+       "      <td>2017-04-04</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>UYA</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>121212</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>Nuke</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Cache</td>\n",
+       "      <td>Cobblestone</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Inferno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9416</th>\n",
+       "      <td>2017-04-04</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>UYA</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>121212</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>Nuke</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Cache</td>\n",
+       "      <td>Cobblestone</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Inferno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9417</th>\n",
+       "      <td>2017-04-04</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>UYA</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>121212</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>Nuke</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Cache</td>\n",
+       "      <td>Cobblestone</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Inferno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9418</th>\n",
+       "      <td>2017-04-04</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>UYA</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>121212</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>Nuke</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Cache</td>\n",
+       "      <td>Cobblestone</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Inferno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9419</th>\n",
+       "      <td>2017-04-04</td>\n",
+       "      <td>Natus Vincere</td>\n",
+       "      <td>UYA</td>\n",
+       "      <td>Inferno</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>121212</td>\n",
+       "      <td>Overpass</td>\n",
+       "      <td>Nuke</td>\n",
+       "      <td>Train</td>\n",
+       "      <td>Cache</td>\n",
+       "      <td>Cobblestone</td>\n",
+       "      <td>Mirage</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Inferno</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9420 rows × 223 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date_x       team_1_x       team_2_x   _map_x  result_1  result_2  \\\n",
+       "0     2020-02-26            NiP  Natus Vincere    Train        10        16   \n",
+       "1     2020-02-26            NiP  Natus Vincere    Train        10        16   \n",
+       "2     2020-02-26            NiP  Natus Vincere    Train        10        16   \n",
+       "3     2020-02-26            NiP  Natus Vincere    Train        10        16   \n",
+       "4     2020-02-26            NiP  Natus Vincere    Train        10        16   \n",
+       "...          ...            ...            ...      ...       ...       ...   \n",
+       "9415  2017-04-04  Natus Vincere            UYA  Inferno        16         9   \n",
+       "9416  2017-04-04  Natus Vincere            UYA  Inferno        16         9   \n",
+       "9417  2017-04-04  Natus Vincere            UYA  Inferno        16         9   \n",
+       "9418  2017-04-04  Natus Vincere            UYA  Inferno        16         9   \n",
+       "9419  2017-04-04  Natus Vincere            UYA  Inferno        16         9   \n",
+       "\n",
+       "      map_winner  starting_ct  ct_1  t_2  ...  system  t1_removed_1  \\\n",
+       "0              2            1     6    9  ...  123412         Dust2   \n",
+       "1              2            1     6    9  ...  123412         Dust2   \n",
+       "2              2            1     6    9  ...  123412         Dust2   \n",
+       "3              2            1     6    9  ...  123412         Dust2   \n",
+       "4              2            1     6    9  ...  123412         Dust2   \n",
+       "...          ...          ...   ...  ...  ...     ...           ...   \n",
+       "9415           1            2     4    6  ...  121212      Overpass   \n",
+       "9416           1            2     4    6  ...  121212      Overpass   \n",
+       "9417           1            2     4    6  ...  121212      Overpass   \n",
+       "9418           1            2     4    6  ...  121212      Overpass   \n",
+       "9419           1            2     4    6  ...  121212      Overpass   \n",
+       "\n",
+       "      t1_removed_2  t1_removed_3  t2_removed_1  t2_removed_2  t2_removed_3  \\\n",
+       "0         Overpass           0.0       Vertigo       Inferno           0.0   \n",
+       "1         Overpass           0.0       Vertigo       Inferno           0.0   \n",
+       "2         Overpass           0.0       Vertigo       Inferno           0.0   \n",
+       "3         Overpass           0.0       Vertigo       Inferno           0.0   \n",
+       "4         Overpass           0.0       Vertigo       Inferno           0.0   \n",
+       "...            ...           ...           ...           ...           ...   \n",
+       "9415          Nuke         Train         Cache   Cobblestone        Mirage   \n",
+       "9416          Nuke         Train         Cache   Cobblestone        Mirage   \n",
+       "9417          Nuke         Train         Cache   Cobblestone        Mirage   \n",
+       "9418          Nuke         Train         Cache   Cobblestone        Mirage   \n",
+       "9419          Nuke         Train         Cache   Cobblestone        Mirage   \n",
+       "\n",
+       "      t1_picked_1  t2_picked_1  left_over  \n",
+       "0          Mirage        Train       Nuke  \n",
+       "1          Mirage        Train       Nuke  \n",
+       "2          Mirage        Train       Nuke  \n",
+       "3          Mirage        Train       Nuke  \n",
+       "4          Mirage        Train       Nuke  \n",
+       "...           ...          ...        ...  \n",
+       "9415          0.0          0.0    Inferno  \n",
+       "9416          0.0          0.0    Inferno  \n",
+       "9417          0.0          0.0    Inferno  \n",
+       "9418          0.0          0.0    Inferno  \n",
+       "9419          0.0          0.0    Inferno  \n",
+       "\n",
+       "[9420 rows x 223 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee4b14e9",
+   "id": "50523b7d",
    "metadata": {},
    "outputs": [],
    "source": []
