--- a/CSGO Winner Prediction.ipynb
+++ b/CSGO Winner Prediction.ipynb
@@ -2913,10 +2913,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50523b7d",
+   "id": "101d5ceb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Match Winner (match_winner) is the variable we will look for to check if Navi/Natus Vincere wins."
+   ]
   }
  ],
  "metadata": {
